--- a/parte.css
+++ b/parte.css
@@ -66,4 +66,11 @@
   user-select: none;
   
 }
-  
+
+#linkTexto{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  border: 0cap;
+
+}
